<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <cn.grass.gate.widgets.TopView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_header_height"
        android:background="@color/colorPrimary"
        app:left_drawable="@mipmap/imageselector_back"
        app:left_show="text"
        app:left_text="上一步"
        app:right_show="text"
        app:right_text="下一步"
        app:title_text="@string/take_pic"
        app:title_text_color="@color/color_white"
        android:visibility="gone"/>

    <TextView
        android:layout_marginTop="@dimen/min_top_height"
        android:gravity="center"
        android:id="@+id/done_tv"
        android:layout_below="@id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        style="@style/style_text_content_light"/>
    <TextView
        android:id="@+id/bt_back"
        style="@style/style_primary_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/back"
        android:layout_centerInParent="true"/>
    <TextView
        android:gravity="center"
        android:layout_below="@id/bt_back"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_list"
        style="@style/style_text_content_light"/>



</RelativeLayout>