<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <cn.grass.gate.widgets.TopView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_header_height"
        android:background="@color/colorPrimary"
        app:left_drawable="@mipmap/imageselector_back"
        app:left_show="text"
        app:left_text="上一步"
        app:right_show="text"
        app:right_text="下一步"
        app:title_text="@string/take_pic"
        app:title_text_color="@color/color_white" />



    <TextView
        android:id="@+id/remark_words"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_pic_words"
        style="@style/style_text_content_light"/>
    <ImageView
        android:layout_above="@id/remark_words"
        android:id="@+id/take_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/take_photo"/>
    <TextView
        android:layout_above="@id/take_pic"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5"
        android:gravity="start"
        android:id="@+id/take_pic_all_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_pic_all"
        style="@style/style_text_content_light"/>



</RelativeLayout>