<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_2"
    android:paddingTop="@dimen/layout_padding">
<LinearLayout
    android:background="@color/color_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_name_colon"
            style="@style/style_text_content_light"/>
        <TextView
            android:id="@+id/area_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_text_content_light"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/color_line"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"/>
    <LinearLayout
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_colon"
            style="@style/style_text_content_light"/>
        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_text_content_light"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_no_colon"
            style="@style/style_text_content_light"/>
        <TextView
            android:id="@+id/user_no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_text_content_light"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_addr_colon"
            style="@style/style_text_content_light"/>
        <TextView
            android:id="@+id/user_addr_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_text_content_light"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/work_type_tv"
            android:layout_margin="@dimen/dp_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/work_type_all"
            style="@style/style_text_content_yellow"/>
        <TextView
            android:id="@+id/time_tv"
            android:layout_margin="@dimen/dp_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="2017-07-28 14:34"
            style="@style/style_text_content_light"/>
    </RelativeLayout>

</LinearLayout>

</RelativeLayout>