<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <cn.grass.gate.widgets.TopView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_header_height"
        android:background="@color/colorPrimary"
        app:left_drawable="@mipmap/imageselector_back"
        app:left_show="text"
        app:left_text="取消"
        app:right_show="text"
        app:right_text="下一步"
        app:title_text="@string/old_meter_box"
        app:title_text_color="@color/color_white"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/style_text_content_title_padding"
                 android:text="@string/box_info"

                 />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                 <TextView
                     android:id="@+id/box_stamp_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_15"
                     android:layout_marginBottom="@dimen/dp_15"
                     android:layout_marginLeft="@dimen/dp_20"
                     android:layout_marginRight="@dimen/dp_10"
                     style="@style/style_text_content_light"
                     android:text="@string/box_stamp"
                     />
                <EditText
                    android:id="@+id/box_stamp_et"
                    android:layout_toRightOf="@+id/box_stamp_tv"
                    android:minWidth="@dimen/min_edit_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/scan_asset_no"
                    android:textColorHint="@color/hint_text_color"
                    style="@style/style_text_content_light"
                    />
                <TextView
                    android:id="@+id/box_stamp_scan_tv"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_10"
                    style="@style/style_text_content_light"
                    android:text="@string/scan"/>
                <TextView
                    android:layout_toLeftOf="@id/box_stamp_scan_tv"
                    android:id="@+id/box_stamp_pic_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_15"
                    style="@style/style_text_content_light"
                    android:text="@string/photo_view"/>
            </RelativeLayout>

                <RelativeLayout
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">
                    <TextView
                        android:id="@+id/box_pic_tv"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_10"
                        style="@style/style_text_content_light"
                        android:text="@string/box_pic"/>
                    <ImageView
                        android:id="@+id/put_box_pic_iv"
                        android:layout_toRightOf="@+id/box_pic_tv"
                        android:layout_width="@dimen/dp_48"
                        android:layout_height="@dimen/dp_48"
                        android:layout_centerVertical="true"
                        style="@style/style_text_content_light"
                        android:src="@mipmap/take_pic"
                        />
                    <ImageView
                        android:id="@+id/box_pic_iv"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_10"
                        style="@style/style_text_content_light"
                        android:text="@string/scan"
                        android:src="@mipmap/take_pic"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">
                    <TextView
                        android:id="@+id/asset_no_colon_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_10"
                        android:drawableLeft="@mipmap/icon_point"
                        style="@style/style_text_content_light"
                        android:text="@string/asset_no_colon"/>
                    <EditText
                        android:id="@+id/asset_no_et"
                        android:layout_toRightOf="@+id/asset_no_colon_tv"
                        android:minWidth="@dimen/min_edit_width"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:hint="@string/asset_no"
                        android:textColorHint="@color/hint_text_color"
                        style="@style/style_text_content_light"
                        />
                    <TextView
                        android:id="@+id/asset_no_scan_tv"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_10"
                        style="@style/style_text_content_light"
                        android:text="@string/scan"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/dp_1"
                    android:layout_marginBottom="@dimen/dp_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">
                    <TextView
                        android:id="@+id/model_no_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:minWidth="65dp"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_10"
                        style="@style/style_text_content_light"
                        android:text="@string/model_no"/>
                    <EditText
                        android:id="@+id/model_no_et"
                        android:layout_toRightOf="@+id/model_no_tv"
                        android:minWidth="@dimen/min_edit_width"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:hint="@string/forward_active_power"
                        android:textColorHint="@color/hint_text_color"
                        style="@style/style_text_content_light"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">
                    <TextView
                        android:id="@+id/factory_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_10"
                        android:drawableLeft="@mipmap/icon_point"
                        style="@style/style_text_content_light"
                        android:text="@string/factory"/>
                    <EditText
                        android:id="@+id/factory_et"
                        android:layout_toRightOf="@+id/factory_tv"
                        android:minWidth="@dimen/min_edit_width"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:hint="@string/scan_asset_no"
                        android:textColorHint="@color/hint_text_color"
                        style="@style/style_text_content_light"
                        />
                    <TextView
                        android:visibility="gone"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_10"
                        style="@style/style_text_content_light"
                        android:text="@string/scan"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/dp_1"
                    android:layout_marginBottom="@dimen/dp_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/spec_tv"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical|end"
                            android:minWidth="65dp"
                            android:paddingRight="@dimen/dp_15"
                            android:layout_marginTop="@dimen/dp_15"
                            android:layout_marginBottom="@dimen/dp_15"
                            style="@style/style_text_content_light"
                            android:text="@string/spec"/>
                        <EditText
                            android:id="@+id/spec_et"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/scan_no"
                            android:textColorHint="@color/hint_text_color"
                            style="@style/style_text_content_light"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:minWidth="65dp"
                            android:layout_marginTop="@dimen/dp_15"
                            android:layout_marginBottom="@dimen/dp_15"
                            android:drawableLeft="@mipmap/icon_point"
                            style="@style/style_text_content_light"
                            android:text="@string/cabinet_material"/>
                        <EditText
                            android:id="@+id/cabinet_material_et"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/scan_no"
                            android:textColorHint="@color/hint_text_color"
                            style="@style/style_text_content_light"
                            />

                    </LinearLayout>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/dp_1"
                    android:layout_marginBottom="@dimen/dp_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_marginTop="@dimen/dp_15"
                            android:layout_marginBottom="@dimen/dp_15"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:minWidth="65dp"
                            android:drawableLeft="@mipmap/icon_point"
                            style="@style/style_text_content_light"
                            android:text="@string/product_date"/>
                        <EditText
                            android:id="@+id/product_date_et"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/scan_no"
                            android:textColorHint="@color/hint_text_color"
                            style="@style/style_text_content_light"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:minWidth="65dp"
                            android:layout_marginTop="@dimen/dp_15"
                            android:layout_marginBottom="@dimen/dp_15"
                            android:drawableLeft="@mipmap/icon_point_null"
                            style="@style/style_text_content_light"
                            android:text="@string/protect_level"/>
                        <EditText
                            android:id="@+id/protect_level_et"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/scan_no"
                            android:textColorHint="@color/hint_text_color"
                            style="@style/style_text_content_light"
                            />

                    </LinearLayout>

                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/remark_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginBottom="@dimen/dp_2"
                        android:layout_marginLeft="@dimen/dp_5"
                        style="@style/style_text_content_light"
                        android:text="@string/remark"/>
                    <EditText
                        android:id="@+id/edit_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        style="@style/style_text_content_light"
                        android:minHeight="@dimen/dp_96"/>
                </LinearLayout>
     

        </LinearLayout>
    </ScrollView>


</RelativeLayout>